# rs-aoc

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/aoc2021/: day01.rs  mod.rs
src/aoc2022/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day09.rs  day10.rs  day11.rs  mod.rs
src/aoclib/: cli.rs  day.rs  mod.rs  year.rs
