[package]
name = "rs-aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["colored-output"]

colored-output = ["colored"]

[dependencies]
colored = { version = "1.9", optional = true }
time = "0.3.21"
