[package]
name = "rs-aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["colored-output"]

colored-output = ["colored"]

[dependencies]
clap = { version = "4.3.0", features = ["cargo", "color", "derive"] }
colored = { version = "1.9", optional = true }
itertools = "0.10.5"
paste = "1.0.12"
time = "0.3.21"
